--- a/MODULO_ASPIRANTE 28 nov 2014/nbproject/private/private.properties
+++ b/MODULO_ASPIRANTE 28 nov 2014/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Desarrollo de sistem\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3-376726226.properties
+deploy.ant.properties.file=C:\\Users\\Macedo\\AppData\\Roaming\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv3-990000862.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Desarrollo de sistem/GlassFish_Server/glassfish/domains/domain2
-j2ee.server.home=C:/Users/Desarrollo de sistem/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Desarrollo de sistem\\GlassFish_Server\\glassfish;C:\\Users\\Desarrollo de sistem\\GlassFish_Server\\glassfish\\domains\\domain2]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Desarrollo de sistem/GlassFish_Server
+j2ee.server.domain=C:/Users/Macedo/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Macedo/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Macedo\\GlassFish_Server\\glassfish;C:\\Users\\Macedo\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Macedo/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\Desarrollo de sistem\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Macedo\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
