--- a/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
+++ b/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.gson-2.2.2.jar=web\\lib\\gson-2.2.2.jar
+file.reference.jasypt-1.9.0.jar=web\\lib\\jasypt-1.9.0.jar
 file.reference.ojdbc14.jar=web\\lib\\ojdbc14.jar
 includes=**
 j2ee.compile.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc14.jar}:\
-    ${file.reference.gson-2.2.2.jar}
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.jasypt-1.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
