--- a/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
+++ b/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.gson-2.2.2.jar=web\\lib\\gson-2.2.2.jar
-file.reference.itextpdf-5.4.1.jar=C:\\Users\\Chavitta\\Desktop\\MODULO_ASPIRANTE 28 nov 2014\\build\\web\\WEB-INF\\classes\\Jar\\itextpdf-5.4.1.jar
+file.reference.itextpdf-5.4.1.jar=web\\lib\\itextpdf-5.4.1.jar
 file.reference.jasypt-1.9.0.jar=web\\lib\\jasypt-1.9.0.jar
 file.reference.ojdbc14.jar=web\\lib\\ojdbc14.jar
 includes=**
