Se valida el periodo bloqueando la pantalla principal

--- a/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
+++ b/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.gson-2.2.2.jar=web\\lib\\gson-2.2.2.jar
 file.reference.itextpdf-5.4.1.jar=web\\lib\\itextpdf-5.4.1.jar
 file.reference.jasypt-1.9.0.jar=web\\lib\\jasypt-1.9.0.jar
 file.reference.ojdbc14.jar=web\\lib\\ojdbc14.jar
+file.reference.recaptcha4j-0.0.7.jar=web\\lib\\recaptcha4j-0.0.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.ojdbc14.jar}:\
     ${file.reference.gson-2.2.2.jar}:\
     ${file.reference.jasypt-1.9.0.jar}:\
-    ${file.reference.itextpdf-5.4.1.jar}
+    ${file.reference.itextpdf-5.4.1.jar}:\
+    ${file.reference.recaptcha4j-0.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
