--- a/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
+++ b/MODULO_ASPIRANTE 28 nov 2014/nbproject/project.properties
@@ -48,10 +48,10 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc14.jar}:\
-    ${file.reference.gson-2.2.2.jar}:\
     ${file.reference.jasypt-1.9.0.jar}:\
     ${file.reference.itextpdf-5.4.1.jar}:\
-    ${file.reference.recaptcha4j-0.0.7.jar}
+    ${file.reference.recaptcha4j-0.0.7.jar}:\
+    ${file.reference.gson-2.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
